examples/test/testpolicy14214.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14214
  namespace: namespace355
spec:
  podSelector:
    matchLabels:
      key39: value42
      key9: value41
      key36: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value6
          key26: value31
          key6: value3
      podSelector:
        matchLabels:
          key49: value34
          key28: value32
